Revision history for HarfBuzz::Shaper.

0.028 2025-01-28

    - Fix building fallback lib.

0.027 2024-05-07

    - Bump included harfuzz to 8.4.0.

0.026 2022-01-07

    - Add get_font_extents method.
      Required by Text::Layout 0.028.

0.025 2021-12-24

    - Add get_extents method.
      Required by Text::Layout 0.028.

0.024 2021-04-12

    - Fix build problem of the fallback library on MacOS Catalina.

0.023 2020-07-11

    - Fix language setting.
    - Add set/get script and direction.
      Thanks for PhilterPaper to contribute code.
    - Add reset method. Resets font/size/script/direction/language.
      Optionally resets font/face cache as well.
    - (XS) Add hb_buffer_reset.
    - Improve documentation.

0.022 2020-06-05

    - Update tests for harfbuzz 2.6.6. Thanks to ppisar for fixing this.

0.021 2020-02-08

    - Add set/get_language.
    - Simplify XS by using typemaps.
    - Try fix some build problems on FreeBSD 10.

0.020 2020-02-07

    - Solve some memory corruption on Windows.
    - Remove liberation test font.

0.019 2020-02-06 16:31

    - Implement shaping features. See e.g. t/30_kern.t.
    - Remove t/99_showlog.t (doesn't show info)
    - Small build fixes.

0.018.4 Sun Feb  2 09:55

    - Small build fixes.

0.018.3 Fri Jan 31 15:40

    - Small build fixes.
    - add t/99_showlog.t to get more detailed build/test information.

0.018.2 Fri Jan 31 09:39

    - Small build fixes.
    - Move harfbuzz sources to a separate directory to avoid inclusion
      of the wrong include files when using platform library.
    
0.018.1 Thu Jan 31 00:00

    - Small build fixes.
    
0.018 Thu Jan 30 09:55

    - Add harfbuzz source so we can build the lib ourselves if needed.
    - Upgrade to upstream harfbuzz 2.6.4.

0.017 Wed Jan 29 21:00

    - Add INSTALL document.

0.016 Mon Jan 27 08:47:55

    - Raise requirement for the harfbuzz library to version 1.7.7.

0.015 Sun Jan 26 22:22:22

    - Modify include paths to work on more systems.