@@ -1,0 +1,40 @@
+name: CI for MacOS
+on:
+  push:
+    branches:
+      - macosbuild
+
+jobs:
+
+  macOS:
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - macos-13
+          - macos-latest
+        inchs: [ 0, 1 ]
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: perl -V
+        run: perl -V
+      - name: Install cpanm
+        run: brew install cpanm
+      - name: Install HarfBuzz
+        run: |
+          brew install harfbuzz
+          pkg-config --libs harfbuzz
+      - name: Install Dependencies
+        run: cpanm --installdeps --notest .  || cat /Users/runner/.cpanm/build.log
+      - name: Build
+        env:
+          INCHS: ${{ matrix.inchs }}
+        run: |
+          perl Makefile.PL
+          make
+      - name: Run Tests
+        run: make test
